--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -26,9 +26,13 @@
   },
   "dependencies": {
     "@metamask/providers": "^9.0.0",
+    "buffer": "^6.0.3",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "siwe": "^2.1.4",
+    "stream-browserify": "^3.0.0",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
