--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "snap",
+  "name": "siwe-metamask-snap",
   "version": "0.1.0",
   "private": true,
-  "description": "The 'Hello, world!' of MetaMask Snaps, now written in TypeScript.",
+  "description": "A snap with a companion Dapp that uses SIWE to retrieve an API key",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "https://github.com/ziad-saab/siwe-metamask-snap.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "main": "src/index.ts",
